# symetric

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  .ocamlformat  Containerfile  Makefile  README.md  cad.sk  cad0.sk  cad1.sk  cad2.sk  cad_header.sk  cad_test.sk  cleanup  csg_numeric_prompt.txt  cstage.ml  deepcoder.ml  dune  dune-project  dune-workspace  flake.nix  grammar.ml  hole_hardcoder.patch  int_array_tuple_set.ml  int_list.ml  int_tuple_set.ml  mk_bench.ml  regex_nosketch_nl_prompt.txt  regex_nosketch_prompt.txt  regex_prompt.txt  sigs.ml  stage.ml  staged-synth.opam  staged-synth.opam.locked  staged_synth.opam  symetric-lib.opam  synth.ml  test.sh  time.sh  (+4 more)
bench/: Makefile  mk_bench.py
bench/cad/: 1cube.sexp  1sphere.sexp  2sphere-both.sexp  2sphere-input.sexp  2sphere-inter.sexp  2sphere-neither.sexp  2sphere-new.sexp  2sphere-simple.sexp  2sphere-union.sexp  3sphere.sexp  camera5_10.sexp  camera8_4.sexp  microscope2_1.sexp  microscope7_13.sexp  microscope7_9.sexp  satellite0_3.sexp
bench/cad2/: 2circle-inter.sexp  circle_and_rect.sexp  circles_and_rect.sexp  circles_and_rect_10.sexp  circles_unsat.sexp  crosses_10  crosses_20  crosses_5
bench/cad_ext/: bullseye  bumps  circle_repl  (+6 more)
bitarray/lib/: bitarray.ispc  bitarray.ml  bitarray.mli  bitarray_stubs.c  dune  native.ml  shared.ml  test.ml  vectorized.ml
cadtests/: CSG_discrete2.skh  CSG_discrete2_bias2.skh  camera5_10.sk  camera8_4.sk  microscope2_1.sk  microscope7_13.sk  microscope7_9.sk  satellite0_3.sk
doc/: distance.org  local_search.org  writeup.tex
etc/: Makefile  sexp.cpp  sexp.hpp  sexp_test.cpp  stdlib.hpp
learn/: train.py
lib/: abs.ml  abs.mli  abs_ext.ml  abs_intf.ml  abs_synth_cad.ml  abs_synth_regex.ml  abstract_synth.ml  abstract_synth.mli  abstract_synth_cad.ml  abstract_synth_example.ml  abstract_synth_shape.ml  abstract_synth_tensor.ml  abstract_synth_tensor_v2.ml  abstract_synth_test.ml  abstract_synth_util.ml  analysis.ml  apply.ml  ast.ml  ast.mli  ast0.ml  backtrack_refine.ml  baseline.ml  baseline.mli  baseline_synth_tensor.ml  beam.ml  bench.ml  bench0.ml  bitarray.ml  bool_vector_cubes.ml  bool_vector_false_only.ml  bool_vector_precise.ml  box.ml  box_test.ml  cad.ml  cad_abs.ml  cad_abs_hashcode.ml  cad_abs_test.ml  cad_bench.ml  cad_conc.ml  cad_conc0.ml  (+202 more)
nix/: pprint.nix  ppx_yojson_conv.nix  sek.nix
notebooks/: .gitignore  CSG LLM.ipynb  CSG results.ipynb  Interpol.ipynb  LLM Results.ipynb  Metric learning.ipynb  Regex results.ipynb  Towers results.ipynb  Untitled.ipynb  cad_analysis.org  crosses.org  crosses.sh  diverse.org  lazy_vs_eager.org  merge.org  merge_joblog_abs  merge_joblog_conc  plots.py  plots2.py  plots3.py  run_diverse.sh  run_merge.sh  run_sweep.sh  search_space_dist.py  shared.py  sweep.py  triples.npy
papers/: .gitignore  distance.org
prompts/: csg_numeric_prompt.txt  csg_prompt.txt  regex_nosketch_nl_prompt.txt  regex_nosketch_prompt.txt  regex_prompt.txt  tower_prompt.txt
stage-lib/: analysis.ml  cad.ml  cad_sample.ml  cstage.ml  cstage_array.ml  cstage_core.ml  cstage_float.ml  cstage_int.ml  cstage_set.ml  cstage_string.ml  cstage_tuple.ml  deepcoder.ml  deepcoder_test.ml  genlet.ml  grammar.ml  grammar.mli  grammar_test.ml  log.ml  mlstage.ml  nonlocal_let.ml  semantics.ml  sigs.ml  synth.ml  types.ml  util.ml
test/: dune  eval.ml
(+1348 files in other folders)
