(library
 (name values)
 (libraries core)
 (modules int_list int_tuple_set int_array_tuple_set trace)
 (preprocess (pps ppx_sexp_conv ppx_compare ppx_hash)))

(library
 (name mk_bench_lib)
 (libraries core core_bench combinat values)
 (modules util grammar sigs synth deepcoder cstage)
 (preprocess (pps ppx_sexp_conv ppx_compare ppx_hash ppx_expect))
 (inline_tests)
 (flags (:standard -warn-error -A)))

(executable
 (name mk_bench)
 (libraries core core_bench combinat values mk_bench_lib)
 (modules mk_bench)
 (preprocess (pps ppx_sexp_conv ppx_compare ppx_hash))
 (flags (:standard -warn-error -A)))

(rule
 (target bench.ml)
 (action (with-stdout-to bench.ml (run ./mk_bench.exe))))

(executable
 (name bench)
 (libraries core core_bench values)
 (modules bench)
 (flags (:standard -warn-error -A)))

