(library
 (public_name symetric)
 (libraries core core_kernel.pairing_heap combinat fmt vpt logs yojson
   bitarray bheap sek gen ancient)
 (preprocess
  (pps ppx_sexp_conv ppx_hash ppx_compare ppx_sexp_message ppx_fields_conv
    base_quickcheck.ppx_quickcheck ppx_variants_conv ppx_expect ppx_let
    ppx_assert ppx_here ppx_yojson_conv))
 (inline_tests)
 (flags :standard -g -open Core -w -9-32)
 (instrumentation (backend landmarks)))

(menhir
 (modules regex_parser))

(ocamllex regex_lexer)
