(library
 (name bitarray)
 (libraries core fmt)
 (foreign_stubs
  (language c)
  (names bitarray_stubs))
 (foreign_archives bitarray)
 (preprocess (pps ppx_jane))
 (inline_tests))

(rule
 (deps bitarray.ispc)
 (targets bitarray.o bitarray.h libbitarray.a)
 (action
  (progn
   (run ispc -o bitarray.o -h bitarray.h bitarray.ispc)
   (run ar -rcs libbitarray.a bitarray.o))))
